Fix Python compatibility for Render deployment
- Updated pandas from 2.1.1 to 2.2.0 for Python 3.11+ compatibility
- Updated Flask to 3.0.0 and other dependencies to latest stable versions
- Added runtime.txt to specify Python 3.11.9 for Render
- Updated render.yaml with proper syntax and environment variables
- This fixes the Cython compilation error with pandas on Python 3.13

--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
 services:
   - type: web
     name: forex-analysis-pro
-    env: python
+    runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     plan: free
     region: oregon
-    env_vars:
+    envVars:
       - key: PYTHON_VERSION
         value: 3.11.9
       - key: FLASK_ENV
