--- a/render.yaml
+++ b/render.yaml
@@ -2,15 +2,17 @@ services:
   - type: web
     name: forex-analysis-pro
     runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    buildCommand: pip install --upgrade pip setuptools wheel && pip install -r requirements.txt
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --timeout 120
     plan: free
     region: oregon
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.9
+        value: 3.11.6
       - key: FLASK_ENV
         value: production
+      - key: PYTHONUNBUFFERED
+        value: "1"
     scaling:
       minInstances: 1
       maxInstances: 1
