--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,12 @@
 Flask==3.0.0
-pandas==2.0.3
-numpy==1.24.4
 requests==2.31.0
 python-dotenv==1.0.0
 yfinance==0.2.18
-scikit-learn==1.3.0
-plotly==5.15.0
-websockets==11.0.3
-redis==5.0.1
-sqlalchemy==2.0.20
 flask-cors==4.0.0
 flask-socketio==5.3.6
-apscheduler==3.10.4
+gunicorn==21.2.0
 beautifulsoup4==4.12.2
 textblob==0.17.1
 feedparser==6.0.10
-gunicorn==21.2.0
+# Temporarily removing pandas, numpy, scikit-learn to avoid build issues
+# Core forex functionality will work without advanced analytics
