fix: Restructure for Netlify deployment with proper home page routing
- Move home.html to frontend/index.html for Netlify landing page
- Rename frontend/index.html to app.html for main trading dashboard
- Update CSS and JS paths to work with new folder structure
- Fix navigation functions to use app.html instead of /app route
- Update Netlify redirects to handle both home and app pages
- Ensure logo in app.html links back to home page (index.html)
- Now https://forex-analysis-pro.netlify.app/ will show home page correctly

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,17 @@
   # Set Node version (even though we're not using Node, Netlify requires this)
   NODE_VERSION = "18"
 
-# Redirect all routes to index.html for SPA behavior
+# Redirect all routes to index.html for SPA behavior, except app.html
+[[redirects]]
+  from = "/app"
+  to = "/app.html"
+  status = 200
+
+[[redirects]]
+  from = "/app/*"
+  to = "/app.html"
+  status = 200
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
