--- a/frontend/static/manifest.json
+++ b/frontend/static/manifest.json
@@ -18,6 +18,11 @@
       "sizes": "192x192",
       "type": "image/x-icon",
       "purpose": "any maskable"
+    },
+    {
+      "src": "favicon.ico",
+      "sizes": "180x180",
+      "type": "image/x-icon"
     }
   ],
   "categories": ["finance", "productivity", "business"],
