--- a/frontend/static/manifest.json
+++ b/frontend/static/manifest.json
@@ -9,18 +9,18 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "/static/favicon.ico",
       "sizes": "48x48",
       "type": "image/x-icon"
     },
     {
-      "src": "favicon.ico",
+      "src": "/static/favicon.ico",
       "sizes": "192x192",
       "type": "image/x-icon",
       "purpose": "any maskable"
     },
     {
-      "src": "favicon.ico",
+      "src": "/static/favicon.ico",
       "sizes": "180x180",
       "type": "image/x-icon"
     }
